fix(globals.css): no more scroll lock on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,9 @@
 
 html,
 body {
-  touch-action: none;
+  touch-action: pan-y;
   user-select: none;
+  overflow-y: auto;
 }
 
 html {
